--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework-jwt==1.11.0
 gunicorn==19.9.0
 idna==2.7
 oauthlib==2.1.0
+psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
 PyJWT==1.7.0
 python3-openid==3.1.0
